<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextDescriptionsActivity"
            style="@style/editTextCreateNewActivity"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:autofillHints=""
            android:hint="@string/descriptions"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDistanceActivity" />

        <EditText
            android:id="@+id/editTextTimeActivity"
            style="@style/editTextCreateNewActivity"
            android:layout_marginStart="27dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:autofillHints=""
            android:hint="@string/time"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateActivity" />

        <Spinner
            android:id="@+id/spinnerType"
            style="@style/spinner_style"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:dropDownWidth="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameActivity" />

        <TextView
            android:id="@+id/textViewDateActivity"
            style="@style/editTextCreateNewActivity"
            android:layout_marginStart="27dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:gravity="center|left"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerType"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/editTextNameActivity"
            style="@style/editTextCreateNewActivity"
            android:layout_marginStart="27dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextDistanceActivity"
            style="@style/editTextCreateNewActivity"
            android:layout_marginStart="27dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:autofillHints=""
            android:hint="@string/distance"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTimeActivity" />

        <TextView
            android:id="@+id/textView"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="64dp"
            android:text="@string/create_a_new_activity"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="64dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionsActivity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
