<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="395dp"
    android:layout_marginStart="8dp"
    style="@style/viewStyle"
    android:layout_marginTop="10dp"
    android:elevation="10dp">

    <TextView
        android:id="@+id/textViewNameActivity"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAthlete" />

    <TextView
        android:id="@+id/textViewDistanceActivity"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 km"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textViewTimeActivity"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 h"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewElevationsActivity"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 m"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewAthlete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewNameAthlete"
        style="@style/textStyle"
        android:layout_width="173dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:text="Ivan Ivanov"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewAthlete"
        app:layout_constraintTop_toTopOf="@+id/imageViewAthlete" />

    <TextView
        android:id="@+id/textViewTimeListActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewNameAthlete"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameAthlete" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameActivity" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/time"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/elevation_gain"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_picture_activity_list"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistanceActivity" />

    <TextView
        android:id="@+id/textView11"
        style="@style/textStyle"
        android:layout_width="120dp"
        android:layout_height="15dp"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:text="long distance running"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textViewDistanceActivity"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="42dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/the_best_app"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDistanceActivity"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimeActivity"
        app:layout_constraintStart_toEndOf="@+id/textViewDistanceActivity" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTimeActivity"
        app:layout_constraintEnd_toStartOf="@+id/textViewElevationsActivity"
        app:layout_constraintStart_toEndOf="@+id/textViewTimeActivity" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider"
        app:srcCompat="@drawable/ic_outline_share" />

</androidx.constraintlayout.widget.ConstraintLayout>